--- a/css/style.css
+++ b/css/style.css
@@ -608,6 +608,14 @@ fieldset {
   border-radius: 5px;
 }
 
+.ad-form__photo img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  background-color: #e4e4de;
+  border-radius: 5px;
+}
+
 .ad-form__element--submit {
   -ms-flex-preferred-size: 100%;
   flex-basis: 100%;
